--- a/try00/before/backend/gqlgen.yml
+++ b/try00/before/backend/gqlgen.yml
@@ -4,7 +4,7 @@
 # for detailed .gqlgen.yml documentation.
 
 schema:
-- ../schema/*.graphql
+- schema.graphql
 exec:
   filename: generated.go
 model:
@@ -12,6 +12,4 @@ model:
 resolver:
   filename: resolver.go
   type: Resolver
-
-autobind:
-  - github.com/sky0621/study-gqlgen/try01/backend
+autobind: []
